added some rudimentary style to the header'

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,32 @@
+/* * {  
+    outline: 1px solid red;
+    outline-offset: -1px;
+  }*/   
+
 body{
     max-width: 50em;
     line-height: 1.4;
     margin: 0.75em auto;
     padding: 0.25em;
-    background-color: #fff;
-    color: #333;
+    background-color: #2c3234;  
+    color: white;
     font-family: "Source Sans Pro", "Helvetica", "Arial", sans-serif;
-    text-align: justify;
 }
+
+
 
 .contact{
     line-height: 8px;
 }
 .header{
-    display: flex;
-    
+    display:flex;
+    justify-content: space-between;
 }
 
-.right-side{
-    justify-content: flex-end;
+
+.links {
+    list-style-type: none;
+    color: darkgrey;
+    line-height: 2;
+    margin: 35px 0px;
 }
