--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body{
     margin: 35px 0px;
 }
 
-  .abt-me{
+  .abt-me-div{
     text-align: center;
     padding-top: 15px; 
     padding-bottom: 15px;
@@ -40,4 +40,26 @@ body{
   .divider-bot{
     margin-left: 80px;
     margin-right: 80px;
+    margin-bottom: 80px;
+  }
+.abt-me{
+    display: flex;
+    justify-content: space-around;
+}
+
+  .headshot{
+    max-height: 350px;
+  }
+  .swim-pic{
+    width: 400px;
+    height: auto;
+  }
+
+  .info-abt-me{
+    margin-top: -35px;
+    padding-left: 24px;
+  }
+
+  .other-info{
+    display: flex;
   }
